feat: button in discourse style

--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,1 +1,5 @@
-<div style='background-color: red; width: 3em; height: 1em;'>Ahoj!</div>
+<DButton
+    @icon='close'
+    @label={{i18n 'close_notify.button.label'}}
+    title={{i18n 'close_notify.button.title'}}
+/>
