--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,5 +1,5 @@
 <DButton
     @icon='close'
-    @label={{i18n 'close_notify.button.label'}}
-    title={{i18n 'close_notify.button.title'}}
+    @label={{'close_notify.button.label'}}
+    title={{'close_notify.button.title'}}
 />
