fix: locale path in button

--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,5 +1,1 @@
-<DButton
-    @icon='close'
-    @label={{'close_notify.button.label'}}
-    title={{'close_notify.button.title'}}
-/>
+<DButton @icon='close' @label={{'button.label'}} title={{'button.title'}} />
