fix: trying to fix locales

--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,1 +1,5 @@
-<DButton @icon='close' @label={{'button.label'}} title={{'button.title'}} />
+<DButton
+    @icon='lock'
+    @label={{'close_notify.button.label'}}
+    title={{'close_notify.button.title'}}
+/>
