--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,5 +1,1 @@
-<DButton
-    @icon='lock'
-    @label={{i18n 'close_notify.button.label'}}
-    title={{i18n 'close_notify.button.title'}}
-/>
+<DButton @icon='lock' @label={{this.lable}} title={{this.title}} />
