dev: work in progress

--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,1 +1,6 @@
-<DButton @icon='lock' @label={{this.label}} @title={{this.title}} />
+<DButton
+    @icon='lock'
+    @label={{this.label}}
+    @title={{this.title}}
+    @class='btn-danger'
+/>
