feat: close/open action for button

--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,6 +1,7 @@
 <DButton
-    @icon='lock'
+    @icon={{this.icon}}
     @label={{this.label}}
     @title={{this.title}}
     @class='btn-danger'
+    {{on 'click' this.do}}
 />
