feat: enable button only for selected categories

--- a/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
+++ b/javascripts/discourse/connectors/after-topic-footer-main-buttons/close-notify.hbs
@@ -1,7 +1,11 @@
-<DButton
-    @icon={{this.icon}}
-    @label={{this.label}}
-    @title={{this.title}}
-    @class='btn-danger'
-    {{on 'click' this.do}}
-/>
+<div>
+    {{#if this.shouldRender}}
+        <DButton
+            @icon={{this.icon}}
+            @label={{this.label}}
+            @title={{this.title}}
+            @class='btn-danger'
+            {{on 'click' this.do}}
+        />
+    {{/if}}
+</div>
